--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,12 +5,15 @@ spring.flyway.enabled=true
 spring.flyway.url=jdbc:h2:file:~/movierater
 spring.flyway.user=sa
 spring.flyway.password=
+spring.flyway.clean-on-validation-error=true
+
+
 
 ################################################################
 # if you decide to use hibernate (not required but accepted)   #
-# you may need these properties database is created by flyway) #
+# you may need these properties (database is created by flyway) #
 ################################################################
 
-# spring.jpa.hibernate.ddl-auto=none
-# spring.jpa.generate-ddl=false
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.generate-ddl=false
 
